crates/cribo/tests/snapshots/execution_results@late_future_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/late_future_imports/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello test\nfrom: bundled.py",
    stderr: "",
}
