crates/cribo/tests/snapshots/execution_results@pyfail_package_level_cycles.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/pyfail_package_level_cycles/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Package cycle result: pkg1.main(pkg2.helper(using_pkg1_utility))",
    stderr: "",
}
